intro dets stamp align fix2

--- a/styles.css
+++ b/styles.css
@@ -657,7 +657,7 @@ form {
 
   .development-image {
     height: 450px;
-    background-size: 200%;
+    background-size: 220%;
   }
 
   .welc-text-container {
@@ -698,13 +698,16 @@ form {
   }
 
   .icon-img {
-    width: 18px;
-    margin-right: 15px;
+    width: 20px;
+    margin-right: 20px;
   }
 
   .mul-stamp-logo-img {
-    width: 120px;
-    margin: -60% 0 20% 12%;
+    text-align: right;
+    width: 100px;
+    margin: -60% 0 20% 0;
+
+    /* margin: -60% 0 20% 12%; */
   }
 
   .location-text {
